# Update_System

./: README.md
Broker/: Broker_Main.py  Client_Main.py  Error.py  MqttBroker.py  README.txt  ServiceAdvertise.py  UpdateInfo  broker-readme.txt  database.py  docker_repo.py  flash-2s.tar  lwm2mclient  lwm2mserver  nbstreamreader.py  s148340.json  s148340.txt  serv.py  start.sh  update-git.sh
Broker-v6/: Broker_Main.py  Data.py  serv.py  start.sh
Broker/Broker-v0/: Broker_Main.py  Data.py  README.txt  broker-readme.txt  s148340.json  serv.py
Broker/Broker-v1/: Broker_Main.py  database.py  lwm2mserver1  s148340.json  serv.py
Broker/Broker-v2/: Broker_Main.py  UpdateInfo  database.py  flash-5s.tar  s148340.json  serv.py
Broker/Broker-v3/: Broker_Main.py  ServiceAdvertise.py  UpdateInfo  lwm2mserver1  s148340.json  serv.py
Broker/Broker-v4/: Broker_Main.py  Data.py  Error.py  s148340.json  start.sh
Broker/Broker-v5/: Broker_Main.py  Californium.properties  s148340.json  serv.py  start.sh
Broker/Broker-v6/: Broker_Main.py  Data.py  ServiceAdvertise.py  database.py  lwm2mclient  lwm2mserver  serv.py  start.sh
Broker/BrokerClient/: CMakeLists.txt  mongodb_op.c  object_device_update.c  object_software.h  object_software_provision.c  tmp.c
Broker/DeviceClient/: object_software.c
Device/: README  dis.sh
Device/BrokerClient/: assisst_func.c  lwm2mclient.c  lwm2mclient.h  object_software.c  test  test.c  test.h
Device/DeviceClient/: CMakeLists.txt  assisst_func.c  lwm2mclient.c  lwm2mclient.h  object_device_update.c  object_security.c  object_software.c  object_software.h  readme  run
DeviceClient-1-4-2018/: assisst_func.c  lwm2mclient.c  lwm2mclient.h  mongodb_op.c  object_software.c  object_software.h  version_description
wakaama-client/: lwm2mclient
wakaama_client/: Client_Main.py  Data.py  Dockerfile  UpdateInfo  clearlight.py  database.py  download.sh  lwm2mclient  readme  start.sh
wakaama_client/download/: exe.sh
(+3 files in other folders)
